# detect_blur

./: README.md  pyproject.toml
assets/: list_images.json
src/: main.py
