[tool.poetry]
name = "detect-blur"
version = "0.1.0"
description = "Detect blurred images"
authors = ["Christopher Coello <christopher.coello@norsvin.no>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
